--- a/app/global.css
+++ b/app/global.css
@@ -144,6 +144,12 @@ input, textarea {
   color: var(--black);
 }
 
+svg {
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+}
+
 @media (min-width: 400px) {
   body, input, textarea {
     font-size: 20px;
