added work page

--- a/app/global.css
+++ b/app/global.css
@@ -150,8 +150,75 @@ svg {
   display: inline-block;
 }
 
+
+main {
+  position: relative;
+  max-width: var(--max-width);
+  background-color: var(--platinum);
+  padding: 20px;
+  margin: 0 auto;
+}
+
+footer {
+  padding: 20px;
+  background-color: var(--violet);
+  color: var(--platinum);
+}
+
+.footer-inner {
+  width: 100%;
+}
+
+.webring {
+  color: var(--black);
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.copyright {
+  display: block;
+  max-width: var(--max-width);
+  margin: 40px auto;
+  color: var(--rhythm);
+  text-align: center;
+}
+
 @media (min-width: 400px) {
   body, input, textarea {
     font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .blurb {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: 40px auto;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  figure {
+    margin: 0;
+  }
+
+  blockquote {
+    width: 350px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .footer-inner {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 940px;
+    margin: 0 auto;
   }
 }
